[package]
name = "log-monitor"
version = "0.1.0"
authors = ["keys961 <keys961@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
lettre = "0.9"
lettre_email = "0.9"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
